--- a/Everest/Everest.csproj
+++ b/Everest/Everest.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Everest</Title>
+    <Description>Lite embeddable REST-server</Description>
   </PropertyGroup>
 
   <ItemGroup>
