Добавил favicon.ico

--- a/Everest.Shell/Everest.Shell.csproj
+++ b/Everest.Shell/Everest.Shell.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\Everest\Everest.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="public\favicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
