--- a/Everest.Shell/Everest.Shell.csproj
+++ b/Everest.Shell/Everest.Shell.csproj
@@ -17,6 +17,9 @@
     <None Update="public\favicon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="public\files\test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
