--- a/src/Everest/Everest.csproj
+++ b/src/Everest/Everest.csproj
@@ -1,16 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Title>Everest</Title>
-    <Description>Lite embeddable REST-server</Description>
+    <TargetFrameworks>net6.0;net472</TargetFrameworks>
+	  
+	  <id>Everest</id>
+	  <title>Everest</title>
+	  <description>Lite embeddable REST-server</description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<Reference Include="System.Web" />
   </ItemGroup>
 
 </Project>
