Пофиксил system.web

--- a/src/Everest/Everest.csproj
+++ b/src/Everest/Everest.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<Reference Include="System.Web" />
+	<Reference Condition=" '$(TargetFramework)' != 'net6.0'" Include="System.Web" />
   </ItemGroup>
 
 </Project>
