--- a/src/Everest.Shell/Everest.Shell.csproj
+++ b/src/Everest.Shell/Everest.Shell.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Everest\Everest.csproj" />
   </ItemGroup>
 
