--- a/src/Everest.Targets/Everest.Targets.csproj
+++ b/src/Everest.Targets/Everest.Targets.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFrameworks>net6.0;net472</TargetFrameworks>
+	<ImplicitUsings>disable</ImplicitUsings>
+	<Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
